--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,16 +1,15 @@
 @import 'normalize.css';
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import 'variables.css';
 body {
     background-color: var(--bg-color);
 }
 
 #app {
-    font-family: Avenir, Helvetica, Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    text-align: center;
-    color: #2c3e50;
-    /* margin-top: 60px; */
+    color: #26304d;
 }
 
 .grid-app {
