--- a/src/assets/css/components/buttons.css
+++ b/src/assets/css/components/buttons.css
@@ -13,6 +13,22 @@
     cursor:pointer;
     box-shadow: var(--shadow-2);
 }
+/*SIZES*/
+.btn-lg{
+    font-size: 18px;
+    padding:1rem 1.8rem;
+
+}
+.btn-sm{
+    min-width: 80px;
+    font-size: 10px;
+    padding:.5rem .7rem;
+
+}
+/*BLOCK*/
+.btn-block{
+    width:100%!important;
+}
 /*COMMONS*/
 .btn-primary{
     background-color: var(--primary-color);
