--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -25,9 +25,11 @@
 }
 
 .main-cards {
-  column-count: 1;
-  column-gap: 20px;
-  margin: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Where the magic happens */
+  /* grid-auto-rows: 94px; */
+  grid-gap: 20px;
+  /* margin: 20px; */
 }
 
 .card-example {
@@ -41,6 +43,7 @@
   padding: 24px;
   box-sizing: border-box;
 }
+
 
 /* Force varying heights to simulate dynamic content */
 .card-example:first-child {
