--- a/src/assets/css/sidenav.css
+++ b/src/assets/css/sidenav.css
@@ -59,6 +59,9 @@
 .header__search {
     margin-left: 42px;
 }
+.sidenav-logo{
+  visibility: hidden;
+}
 
 @media only screen and (min-width: 46.875em) {
     /* Show the sidenav */
@@ -70,4 +73,15 @@
       .sidenav__close-icon {
         visibility: hidden;
       }
+    .sidenav-header{
+      height:60px;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .sidenav-logo{
+      visibility: visible;
+      width: 80%;
+    }
 }
