--- a/src/assets/css/sidenav.css
+++ b/src/assets/css/sidenav.css
@@ -1,87 +1,128 @@
 .sidenav {
-    grid-area: sidenav;
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-    width: 240px;
-    position: fixed;
-    overflow-y: auto;
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
-    z-index: 2; /* Needs to sit above the hamburger menu icon */
-    background-color: #fff;
-    transform: translateX(-245px);
-    transition: all .6s ease-in-out;
-  }
-  .sidenav.active {
-    transform: translateX(0);
-  }
+  grid-area: sidenav;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 240px;
+  position: fixed;
+  overflow-y: auto;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
+  z-index: 2;
+  /* Needs to sit above the hamburger menu icon */
+  background-color: #fff;
+  transform: translateX(-245px);
+  transition: all .6s ease-in-out;
+}
+
+.sidenav.active {
+  transform: translateX(0);
+}
 
 .sidenav_list {
-    padding: 0;
-    margin-top: 85px;
-    list-style-type: none;
+  padding: 0;
+  list-style-type: none;
 }
 
 .sidenav_list-item {
-    padding: 10px 15px 10px 15px;
-    color:var(--light-font);
+  position: relative;
+  white-space: nowrap;
+  width: 100%;
+  display: flex;
 }
 
-.sidenav_list-item:hover {
-    background-color: rgba(0,0,0,0.09);
-    cursor: pointer;
+.sidenav_list-title {
+  padding: 10px 15px 10px 15px;
+  margin: 1px 15px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  color: var(--neutral-50);
+  font-size: 12px;
+  text-transform: uppercase;
+}
+
+.sidenav_list-item>a {
+  width: 100%;
+  padding: 10px 15px 10px 15px;
+  margin: 1px 15px;
+  color: var(--light-font);
+  text-decoration: none;
+  border-radius: 4px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  transition: 0.2s ease-in-out;
+  display: flex;
+  align-items: flex-end;
+}
+.sidenav_list-item>a>span {
+  margin-left: 10px;
+}
+
+.sidenav_list-item>a.active {
+  background-image: var(--gradient-primary);
+  box-shadow: 0px 0px 5px var(--primary-color);
+  color: white;
+}
+
+.sidenav_list-item>a:hover {
+  cursor: pointer;
+  transform: translateX(5px);
 }
 
 .menu-icon {
-    position: fixed;
-    display: flex;
-    top: 5px;
-    left: 10px;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
-    z-index: 1;
-    cursor: pointer;
-    padding: 12px;
-    background-color: #DADAE3;
+  position: fixed;
+  display: flex;
+  top: 5px;
+  left: 10px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  z-index: 1;
+  cursor: pointer;
+  padding: 12px;
+  background-color: #DADAE3;
 }
 
 .sidenav__close-icon {
-    position: absolute;
-    visibility: visible;
-    top: 8px;
-    right: 12px;
-    cursor: pointer;
-    font-size: 20px;
-    color: #ddd;
-  }
+  position: absolute;
+  visibility: visible;
+  top: 8px;
+  right: 12px;
+  cursor: pointer;
+  font-size: 20px;
+  color: #ddd;
+}
 
 .header__search {
-    margin-left: 42px;
+  margin-left: 42px;
 }
-.sidenav-logo{
+
+.sidenav-logo {
   visibility: hidden;
 }
 
 @media only screen and (min-width: 46.875em) {
-    /* Show the sidenav */
-    .sidenav {
-        /* position: relative; Fixed position on mobile */
-        transform: translateX(0);
-      }
-    
-      .sidenav__close-icon {
-        visibility: hidden;
-      }
-    .sidenav-header{
-      height:60px;
-      width: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    .sidenav-logo{
-      visibility: visible;
-      width: 80%;
-    }
+
+  /* Show the sidenav */
+  .sidenav {
+    /* position: relative; Fixed position on mobile */
+    transform: translateX(0);
+  }
+
+  .sidenav__close-icon {
+    visibility: hidden;
+  }
+
+  .sidenav-header {
+    height: 60px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .sidenav-logo {
+    visibility: visible;
+    width: 80%;
+  }
 }
