--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -11,9 +11,9 @@
 .main-overview {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Where the magic happens */
-  grid-auto-rows: 94px;
-  grid-gap: 20px;
-  margin: 20px;
+  grid-auto-rows: auto;
+  grid-gap: 1rem;
+  margin: auto;
 }
 
 .overviewcard {
@@ -26,10 +26,8 @@
 
 .main-cards {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Where the magic happens */
-  /* grid-auto-rows: 94px; */
-  grid-gap: 20px;
-  /* margin: 20px; */
+  grid-template-columns: repeat(auto-fit, minmax(0px, 1fr)); /* Where the magic happens */
+  grid-gap: 1rem;
 }
 
 .card-example {
@@ -58,7 +56,7 @@
   height: 265px;
 }
 
-@media only screen and (min-width: 65.625em) {
+@media only screen and (min-width: --breakpoint) {
   /* Break out main cards into two columns */
   .main-cards {
     column-count: 2;
