--- a/src/assets/css/components/buttons.css
+++ b/src/assets/css/components/buttons.css
@@ -1,10 +1,10 @@
 .btn{
     border:none;
-    padding: .7rem 1.5rem;
+    padding: .6rem 1.5rem;
     min-width: 120px;
     border-radius: 4px;
     box-shadow: var(--shadow-2);
-    font-size: 14px;
+    font-size: .9rem;
     font-weight: 500;
     margin:5px;
     color:white;
@@ -15,13 +15,13 @@
 }
 /*SIZES*/
 .btn-lg{
-    font-size: 18px;
-    padding:1rem 1.8rem;
+    font-size: 1.1rem;
+    padding:.9rem 1.8rem;
 
 }
 .btn-sm{
     min-width: 80px;
-    font-size: 10px;
+    font-size: .7rem;
     padding:.5rem .7rem;
 
 }
