--- a/src/assets/css/components/forms.css
+++ b/src/assets/css/components/forms.css
@@ -19,12 +19,12 @@
     margin-left: .2rem;
 }
 
-.form-control,
-.form-control {
+.form-control{
     padding: .438rem 1rem;
     border-radius: 4px;
     border: 1px solid var(--border-color);
     font-size: .9rem;
+    line-height: .9rem;
 }
 
 .form-control::placeholder {
@@ -53,7 +53,13 @@
 .input-group {
     display: flex;
 }
-
+.input-group:focus-within .input-group-prepend, .input-group:focus-within .input-group-append{
+    border-color: var(--purple-40);
+    outline: none;
+}
+.input-group>.form-control{
+    width: 100%;
+}
 .input-group>.form-control:not(:first-child) {
     padding-left: 0;
     border-left: 0;
@@ -86,21 +92,26 @@
 
 .input-group-text {
     margin-bottom: 0;
-    padding: .438rem .8rem;
+    padding: .25rem .8rem;
     text-align: center;
-    background-color: #fff;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
-    font-size: .9rem;
+    justify-content: center;
+    font-size: .88rem;
     font-weight: 400;
-    line-height: 1.45;
     color: #6e6b7b;
     white-space: nowrap;
 }
 .input-group-text>svg{
-    width: .9rem;
+    width: .88rem;
+}
+
+.input-group .form-control.is-invalid{
+    border-right: 1px solid var(--error-40);
+} .input-group .form-control.is-valid{
+    border-right: 1px solid var(--success-40);
 }
