--- a/src/assets/css/sidenav.css
+++ b/src/assets/css/sidenav.css
@@ -17,8 +17,17 @@
 .sidenav.active {
   transform: translateX(0);
 }
+.sidenav-overlay{
+  position: absolute;
+  display: block;
+  height: 100%;
+  width:100vw;
+  transition: all .6s ease-in-out;
+  background-color:rgba(0, 0, 0, 0.4);
+}
 
 .sidenav_list {
+  margin:0;
   padding: 0;
   list-style-type: none;
 }
@@ -52,10 +61,16 @@
   overflow: hidden;
   transition: 0.2s ease-in-out;
   display: flex;
-  align-items: flex-end;
+  align-items: stretch;
+}
+.sidenav_list-item>a>svg {
+  width: 1rem;
+  padding-bottom: 2px;
 }
 .sidenav_list-item>a>span {
   margin-left: 10px;
+  vertical-align: middle;
+  align-self: center;
 }
 
 .sidenav_list-item>a.active {
@@ -66,39 +81,27 @@
 
 .sidenav_list-item>a:hover {
   cursor: pointer;
-  transform: translateX(5px);
+  padding-left:20px;
 }
 
-.menu-icon {
-  position: fixed;
+
+.sidenav-header {
+  height: 60px;
+  width: 100%;
   display: flex;
-  top: 5px;
-  left: 10px;
+  justify-content: flex-start;
   align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  z-index: 1;
-  cursor: pointer;
-  padding: 12px;
-  background-color: #DADAE3;
+  padding: 0 20px;
 }
-
 .sidenav__close-icon {
-  position: absolute;
   visibility: visible;
-  top: 8px;
-  right: 12px;
   cursor: pointer;
-  font-size: 20px;
-  color: #ddd;
+  color: var(--light-font);
 }
 
-.header__search {
-  margin-left: 42px;
-}
 
 .sidenav-logo {
-  visibility: hidden;
+  width: 90%;
 }
 
 @media only screen and (min-width: 46.875em) {
@@ -113,16 +116,4 @@
     visibility: hidden;
   }
 
-  .sidenav-header {
-    height: 60px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .sidenav-logo {
-    visibility: visible;
-    width: 80%;
-  }
 }
