--- a/src/assets/css/variables.css
+++ b/src/assets/css/variables.css
@@ -18,9 +18,16 @@
 
 
 
-    --shadow-1: 0px 1px 1px rgba(9, 30, 66, 0.25), 0px 0px 1px rgba(9, 30, 66, 0.31);
+    /* --shadow-1: 0px 1px 1px rgba(9, 30, 66, 0.25), 0px 0px 1px rgba(9, 30, 66, 0.31);
     --shadow-2: 0px 3px 5px rgba(9, 30, 66, 0.2), 0px 0px 1px rgba(9, 30, 66, 0.31);
     --shadow-3: 0px 8px 12px rgba(9, 30, 66, 0.15), 0px 0px 1px rgba(9, 30, 66, 0.31);
-    --shadow-4: 0px 18px 28px rgba(9, 30, 66, 0.15), 0px 0px 1px rgba(9, 30, 66, 0.31);
+    --shadow-4: 0px 18px 28px rgba(9, 30, 66, 0.15), 0px 0px 1px rgba(9, 30, 66, 0.31); */
 
+    --shadow-1: 0px 1px 1px rgba(9, 30, 66, 0.25);
+    --shadow-2: 0px 3px 5px rgba(9, 30, 66, 0.2);
+    --shadow-3: 0px 8px 12px rgba(9, 30, 66, 0.15);
+    --shadow-4: 0px 18px 28px rgba(9, 30, 66, 0.15);
+
+
+    --breakpoint: 60em;
 }
