--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -47,3 +47,4 @@ body {
 @import 'components/cards.css';
 @import 'components/buttons.css';
 @import 'components/forms.css';
+@import 'components/table-list.css';
