--- a/src/assets/css/helpers.css
+++ b/src/assets/css/helpers.css
@@ -26,8 +26,20 @@
 
 
 
+.text-secondary {
+    color: var(--light-font) !important;
+}
 .text-danger {
-    color: var(--error-40) !important;
+    color: var(--error-60) !important;
+}
+.text-success {
+    color: var(--success-60) !important;
+}
+.text-warning {
+    color: var(--warning-40) !important;
+}
+.text-primary {
+    color: var(--primary-color) !important;
 }
 
 @media only screen and (min-width: 60em) {
