--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -48,3 +48,4 @@ body {
 @import 'components/buttons.css';
 @import 'components/forms.css';
 @import 'components/table-list.css';
+@import 'components/modal.css';
