--- a/src/assets/css/components/modal.css
+++ b/src/assets/css/components/modal.css
@@ -31,6 +31,7 @@
     margin: 0px;
     padding: 20px;
     -webkit-column-break-inside: avoid;
+    position:relative
 }
 .modal.fade-in{
     animation: fadeIn .5s ease-in-out;
@@ -40,7 +41,19 @@
     animation: fadeOut .5s ease-in-out;
     animation-fill-mode: forwards;
 }
-
+.modal-exit{
+    height:30px;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.modal-exit > img{
+    width: 30px;
+}
 
 @media only screen and (min-width: 63em) {
 
