--- a/src/assets/css/layout/variables.css
+++ b/src/assets/css/layout/variables.css
@@ -27,6 +27,10 @@
     --shadow-2: 0px 3px 5px rgba(9, 30, 66, 0.2);
     --shadow-3: 0px 8px 12px rgba(9, 30, 66, 0.15);
     --shadow-4: 0px 18px 28px rgba(9, 30, 66, 0.15);
+    --shadow-reverse-1: 0px 0px 1px rgba(9, 30, 66, 0.25);
+    --shadow-reverse-2: 0px -1px 5px rgba(9, 30, 66, 0.2);
+    --shadow-reverse-3: 0px -8px 12px rgba(9, 30, 66, 0.15);
+    --shadow-reverse-4: 0px -18px 28px rgba(9, 30, 66, 0.15);
 
 
     --breakpoint: 60em;
