--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,19 +1,17 @@
-@import 'normalize.css';
+@import 'layout/normalize.css';
 /* @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@import 'variables.css';
+@import 'layout/variables.css';
 *{
     box-sizing: border-box;
 }
 body {
     background-color: var(--bg-color);
-}
-
-#app {
     font-family: 'Montserrat', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     color: #26304d;
+    min-height: 100vh;
 }
 
 .grid-app {
@@ -35,17 +33,19 @@ body {
 }
 
 /*General*/
-@import 'helpers.css';
+@import 'layout/helpers.css';
 
 /*Template*/
-@import 'navbar.css';
-@import 'main.css';
-@import 'sidenav.css';
+@import 'layout/navbar.css';
+@import 'layout/main.css';
+@import 'layout/sidenav.css';
 
 
 /*Components*/
-@import 'components/cards.css';
-@import 'components/buttons.css';
-@import 'components/forms.css';
-@import 'components/table-list.css';
-@import 'components/modal.css';
+@import 'layout/components/cards.css';
+@import 'layout/components/buttons.css';
+@import 'layout/components/forms.css';
+@import 'layout/components/table-list.css';
+@import 'layout/components/modal.css';
+@import 'layout/components/dropdowns.css';
+@import 'layout/components/badges.css';
