--- a/src/assets/css/layout/components/buttons.css
+++ b/src/assets/css/layout/components/buttons.css
@@ -8,6 +8,7 @@
     font-weight: 500;
     margin:5px;
     color:white;
+    width: 100%;
 }
 .btn:hover{
     cursor:pointer;
@@ -219,3 +220,12 @@
     border:none;
     background-image:var(--gradient-dark);
 }
+
+@media only screen and (min-width: 46.875em) {
+    .btn{
+        width: fit-content;
+    }
+    .btn-align-right{
+        align-self: end;
+    }
+  }
