--- a/src/assets/css/layout/components/cards.css
+++ b/src/assets/css/layout/components/cards.css
@@ -2,11 +2,16 @@
     background-color: white;
     border-radius: 3px;
     box-shadow: var(--shadow-2);
-    margin: 20px;
+    margin: 10px;
     padding: 20px;
     -webkit-column-break-inside: avoid;
 }
 .card-title{
     margin:0 0 20px 0;
     margin-left: .3rem;
+}
+@media only screen and (min-width: 63em) {
+    .card{
+        margin:20px;
+    }
 }
