--- a/src/assets/css/layout/helpers.css
+++ b/src/assets/css/layout/helpers.css
@@ -1,7 +1,28 @@
+hr{
+    border-top: none;
+    border-bottom: 1px solid var(--neutral-30);
+}
 .d-flex {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+}
+
+.d-flex.center {
+    justify-content: center;
+    align-items: center;
+}
+
+.d-flex.space-between {
+    justify-content: space-between;
+    align-items: flex-end;
+}
+.d-flex.right {
+    justify-content: flex-end;
+}
+.d-flex.left {
+    justify-content: flex-start;
+    align-items:center;
 }
 
 .d-block {
@@ -17,107 +38,169 @@
 
 .cols2 {
     display: grid;
-    grid-template-columns:  1fr;
+    grid-template-columns: 1fr;
+    /* Where the magic happens */
+    grid-auto-rows: auto;
+    grid-gap: 1rem;
+    margin: auto;
+}
+.cols3 {
+    display: grid;
+    grid-template-columns: 1fr;
     /* Where the magic happens */
     grid-auto-rows: auto;
     grid-gap: 1rem;
     margin: auto;
 }
 
-.my-0{
+.my-0 {
     margin-top: 0!important;
     margin-bottom: 0!important;
 }
-.my-1{
+
+.my-1 {
     margin-top: 1rem!important;
     margin-bottom: 1rem!important;
 }
-.my-2{
+
+.my-2 {
     margin-top: 2rem!important;
     margin-bottom: 2rem!important;
 }
-.my-3{
+
+.my-3 {
     margin-top: 3rem!important;
     margin-bottom: 3rem!important;
 }
-.mx-0{
+
+.mx-0 {
     margin-right: 0!important;
     margin-left: 0!important;
 }
-.mx-1{
+
+.mx-1 {
     margin-right: 1rem!important;
     margin-left: 1rem!important;
 }
-.mx-2{
+
+.mx-2 {
     margin-right: 2rem!important;
     margin-left: 2rem!important;
 }
-.mx-3{
+
+.mx-3 {
     margin-right: 3rem!important;
     margin-left: 3rem!important;
 }
-.mb-0{
+
+.mb-0 {
     margin-bottom: 0!important;
 }
-.mb-1{
+
+.mb-1 {
     margin-bottom: 1rem!important;
 }
-.mb-2{
+
+.mb-2 {
     margin-bottom: 2rem!important;
 }
-.mb-3{
+
+.mb-3 {
     margin-bottom: 3rem!important;
 }
-.mt-0{
+
+.mt-0 {
     margin-top: 0!important;
 }
-.mt-1{
+
+.mt-1 {
     margin-top: 1rem!important;
 }
-.mt-2{
+
+.mt-2 {
     margin-top: 2rem!important;
 }
-.mt-3{
+
+.mt-3 {
     margin-top: 3rem!important;
 }
+.sm-w100{
+    width: 100%;
+}
+.w-100 {
+    width: 100%;
+}
 
+.h-100 {
+    height: 100%;
+}
 
+.text-small {
+    font-size: .9em;
+}
 
+.text-500{
+    font-weight: 500;
+}
+
+.text-bold {
+    font-weight: bold;
+}
 
 .text-secondary {
     color: var(--light-font) !important;
 }
+
 .text-danger {
     color: var(--error-60) !important;
 }
+
 .text-success {
     color: var(--success-60) !important;
 }
+
 .text-warning {
     color: var(--warning-40) !important;
 }
+
 .text-primary {
     color: var(--primary-color) !important;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.nowrap{
+    white-space: nowrap
 }
 
 @media only screen and (min-width: 60em) {
     .cols2 {
         grid-template-columns: 1fr 1fr;
     }
-    .half{
+    .cols3 {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+    .half {
         width: 50%;
     }
-    .half-right{
+    .half-right {
         width: 50%;
         margin-left: 50%;
     }
-    .third, .third-center, .third-right{
+    .third,
+    .third-center,
+    .third-right {
         width: 33.3%;
     }
-    .third-center{
+    .third-center {
         margin-left: 33.3%;
     }
-    .third-right{
+    .third-right {
         margin-left: 66.6%;
+    }
+    .sm-w100{
+        width: auto;
     }
 }
