--- a/src/assets/css/layout/navbar.css
+++ b/src/assets/css/layout/navbar.css
@@ -6,6 +6,7 @@
     align-items: center;
     justify-content: flex-end;
     padding: 0 16px;
+    max-width: 100vw;
 }
 .menu-icon {
   position: absolute;
@@ -46,7 +47,13 @@
 .profile_thumbnail{
     max-height: 50px;
     max-width: 50px;
-    height: auto;
-    width: auto; 
+    height: 50px;
+    width: 50px; 
     border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--purple-40);
+    font-weight: bold;
+    color:white;
 }
