--- a/src/assets/css/layout/sidenav.css
+++ b/src/assets/css/layout/sidenav.css
@@ -140,7 +140,9 @@
 
 
 .sidenav-logo {
-  width: 90%;
+  max-width: 90%;
+  max-height:80%;
+  margin-left: 10px;
 }
 
 @media only screen and (min-width: 46.875em) {
